<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_BackProfile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_v2"
            android:drawableStart="@drawable/ic_keyboard_arrow_left"
            android:fontFamily="Roboto"
            android:paddingEnd="40sp"
            android:text="@string/user_s_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFC8D0FF"
            android:textColorHighlight="#FFC8D0FF"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="140dp"
                android:background="#000000"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/ImageView_FriendRequestProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/ic_request_friend" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="5sp"
            android:background="#FFF0F0F0"
            android:fontFamily="Roboto"
            android:paddingStart="6sp"
            android:paddingTop="6sp"
            android:singleLine="true"
            android:text="@string/basic_profile"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_user" />

            <TextView
                android:id="@+id/TextView_NameProfile"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_user" />

            <TextView
                android:id="@+id/TextView_GenderProfile"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_birthday" />

            <TextView
                android:id="@+id/TextView_BirthdayProfile"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="#FFF0F0F0"
            android:fontFamily="Roboto"
            android:paddingStart="6sp"
            android:paddingTop="6sp"
            android:singleLine="true"
            android:text="@string/private_information"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_email" />

            <TextView
                android:id="@+id/TextView_EmailProfile"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_phone" />

            <TextView
                android:id="@+id/TextView_PhoneProfile"
                android:layout_width="260dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView_EditPhoneProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@android:drawable/ic_menu_edit" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/ic_address" />

            <TextView
                android:id="@+id/TextView_AddressProfile"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/TextView_ChangePasswordProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:contextClickable="true"
                android:longClickable="false"
                android:text="Change password"
                android:textColor="@android:color/background_dark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button"
            android:fontFamily="Roboto"
            android:text="@string/logout"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFFFF"
            android:textSize="25sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>